# ug4-proj-examples

./: README.md
rusty-tree/: Cargo.toml  README.org  test.rs
rusty-tree/benches/: benchmark.rs
rusty-tree/examples/: tree.rs
rusty-tree/src/: entry.rs  lib.rs  macro_tree.rs  mutex_tree.rs  node.rs  original_tree.rs  standard_tree.rs  tree.rs
rusty-tree/src/tree/: get.rs  insert.rs  mod.rs
rusty-tree/tests/: concurrent.rs  sequential.rs
rusty-web-server/: Cargo.toml  README.org
rusty-web-server/benches/: benchmark.rs  plot.p
rusty-web-server/benchmarks_ab_report/: csv_data.csv  gnu_plot.gnuplot  macro.txt  original.gnuplot  original.txt  standard.gnuplot  web_server_throughput.xlsx
rusty-web-server/benchmarks_ab_report/generated_data/: macro.csv  macro.gnuplot  original.csv  single_threaded.csv  single_threaded.gnuplot  single_threaded.txt  standard.csv  standard.txt
rusty-web-server/examples/: run.rs
rusty-web-server/src/: action.rs  lib.rs  request.rs  response.rs
rusty-web-server/src/server/: macro_server.rs  mod.rs  original_server.rs  single_threaded_server.rs  standard_server.rs
web-server/: Cargo.toml
web-server-lib/: Cargo.toml
web-server-lib/src/: header.rs  lib.rs  request.rs  web_server.rs
web-server/benches/: benchmark.rs  separate_handler.rs  single_handler.rs
web-server/src/: header.rs  main.rs  request.rs  web_server.rs
web-server/static/: hello.html
