[package]
name = "rusty-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-junctions = {path = "./../../rusty-junctions"}
log = "0.4.14"
pretty_env_logger = "0.4.0"
rayon = "1.5.1"

[features]
mutex = []
original = []
standard = []
macro = []

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true