[package]
name = "rusty-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-junctions = {path = "./../../rusty-junctions"}
httparse = "1.6.0"

[features]
single_threaded = []
original = []
standard = []
macro = []

[dev-dependencies]
rand = "0.8.5"
rayon = "1.5.1"
criterion = { version = "0.3.5", features = ["html_reports"] }
reqwest = { version = "0.11.10", features = ["blocking"] }

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true