[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

[dependencies]
rusty_junctions = {path = "./../../rusty_junctions"}
httparse = "1.5.1"

[profile.release]
debug = true

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.13.0"
reqwest = { version = "0.11.4", features = ["blocking"]}

[[bench]]
name = "single_handler"
harness = false

[[bench]]
name = "separate_handler"
harness = false

[features]
single_threaded = []
single_handler = []
separate_handler = []